Remove and update station closures, npn updates